# GreenComputing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  carbon_model.hpp  demo.cpp  energy_estimator.hpp  function_profile.hpp  gui_main.mm  main.cpp  path_utils.hpp  qt_main.cpp  report_generator.hpp  static_analyzer.hpp
.github/workflows/: release.yml
demos/: demo.cpp  demo.cs  demo.go  demo.java  demo.js  demo.kt  demo.php  demo.py  demo.rs  demo.swift  demo.ts
